# tacker-horizon

./: .gitignore  .gitreview  .zuul.yaml  MANIFEST.in  README.md  README.rst  __init__.py  babel-djangojs.cfg  bindep.txt  lower-constraints.txt  manage.py  requirements.txt  setup.cfg  setup.py  tacker.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: index.rst
doc/source/install/: index.rst
doc/source/user/: index.rst
openstack_dashboard/api/: tacker.py
openstack_dashboard/dashboards/nfv/: dashboard.py
openstack_dashboard/dashboards/nfv/vnfcatalog/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
openstack_dashboard/dashboards/nfv/vnfmanager/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
openstack_dashboard/enabled/: _50_nfv.py
openstack_dashboard_extensions/: _80_nfv.py
releasenotes/notes/: drop-py-2-7-55250f584936f88e.yaml  support-nfv-orchestration-api-v2-a0ec6da7c67e6d4f.yaml
static/nfv/css/: nfv.css
tacker_horizon/: __init__.py
tacker_horizon/enabled/: _80_nfv.py
tacker_horizon/openstack_dashboard/api/: __init__.py  tacker.py
tacker_horizon/openstack_dashboard/dashboards/nfv/: dashboard.py  utils.py
tacker_horizon/openstack_dashboard/dashboards/nfv/lccnsubscription/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
tacker_horizon/openstack_dashboard/dashboards/nfv/nscatalog/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
tacker_horizon/openstack_dashboard/dashboards/nfv/nsmanager/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
tacker_horizon/openstack_dashboard/dashboards/nfv/vim/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
tacker_horizon/openstack_dashboard/dashboards/nfv/vnfcatalog/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
tacker_horizon/openstack_dashboard/dashboards/nfv/vnffgcatalog/: forms.py  panel.py  tables.py  tabs.py  tests.py  (+2 more)
tacker_horizon/test/: base.py  settings.py  urls.py
tacker_horizon/test/integration/: horizon.conf  test_basic.py
tools/: find_executables.sh
vnfcatalog/: forms.py  panel.py  tables.py  tabs.py  tests.py  views.py
vnfcatalog/templates/vnfcatalog/: _onboardvnf.html
vnfmanager/: forms.py  panel.py  tables.py  tabs.py  views.py
vnfmanager/templates/vnfmanager/: _add_service.html  add_service.html
(+167 files in other folders)
